--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,6 +1,10 @@
 @import "core/variables";
 @import "core/reset";
+@import "core/mixins";
+
+
 @import "layout/header";
 @import "layout/character";
 @import "layout/listcharacter";
 @import "layout/characterdetail";
+@import "layout/form";
