--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -8,3 +8,6 @@
 @import "layout/listcharacter";
 @import "layout/characterdetail";
 @import "layout/form";
+@import "layout/page";
+@import "layout/pagenotfound";
+@import "layout/idnotfound";
