--- a/src/stylesheets/core/_reset.scss
+++ b/src/stylesheets/core/_reset.scss
@@ -8,6 +8,7 @@
     box-sizing: border-box;
     font-family: $fontMontserrat;
     color: $colorDarkGreen;
-    background-color: $colorBackground;
+    // background-color: $colorBackground;
+   
   }
   
